@@ -1,17 +1,9 @@
 package uk.gov.hmcts.reform.fpl.controllers;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.OverrideAutoConfiguration;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.http.MediaType;
 import org.springframework.test.context.ActiveProfiles;
-import org.springframework.test.web.servlet.MockMvc;
-import org.springframework.test.web.servlet.MvcResult;
 import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse;
 import uk.gov.hmcts.reform.ccd.client.model.CallbackRequest;
 import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
@@ -26,10 +18,10 @@ import uk.gov.hmcts.reform.fpl.model.Others;
 import uk.gov.hmcts.reform.fpl.model.Respondent;
 import uk.gov.hmcts.reform.fpl.model.RespondentParty;
 import uk.gov.hmcts.reform.fpl.model.common.Element;
-import uk.gov.hmcts.reform.fpl.service.UserDetailsService;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
 import java.util.UUID;
 import java.util.stream.Stream;
 
@@ -37,9 +29,6 @@ import static java.util.Collections.emptyList;
 import static java.util.UUID.randomUUID;
 import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.AssertionsForInterfaceTypes.assertThat;
-import static org.mockito.BDDMockito.given;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 import static uk.gov.hmcts.reform.fpl.enums.CaseManagementOrderKeys.SERVED_CASE_MANAGEMENT_ORDERS;
 import static uk.gov.hmcts.reform.fpl.enums.ComplyOnBehalfEvent.COMPLY_ON_BEHALF_SDO;
 import static uk.gov.hmcts.reform.fpl.enums.ComplyOnBehalfEvent.COMPLY_OTHERS;
@@ -50,30 +39,22 @@ import static uk.gov.hmcts.reform.fpl.enums.DirectionAssignee.OTHERS;
 import static uk.gov.hmcts.reform.fpl.enums.DirectionAssignee.PARENTS_AND_RESPONDENTS;
 
 @ActiveProfiles("integration-test")
-@WebMvcTest(DraftOrdersController.class)
+@WebMvcTest(ComplyOnBehalfController.class)
 @OverrideAutoConfiguration(enabled = true)
-class ComplyOnBehalfControllerTest {
-
-    @Autowired
-    private MockMvc mockMvc;
-
-    @Autowired
-    private ObjectMapper mapper;
-
-    @MockBean
-    private UserDetailsService userDetailsService;
-
-    private static final String AUTH_TOKEN = "Bearer token";
-    private static final String USER_ID = "1";
+class ComplyOnBehalfControllerAboutToStartTest extends AbstractControllerTest {
     private static final UUID DIRECTION_ID = randomUUID();
     private static final UUID RESPONSE_ID = randomUUID();
 
+    ComplyOnBehalfControllerAboutToStartTest() {
+        super("comply-on-behalf");
+    }
+
     @Test
-    void aboutToStartCallbackShouldAddPartiesDirectionsIntoSeparateRoleCollectionsAndPopulateLabels() throws Exception {
+    void shouldAddPartiesDirectionsIntoSeparateRoleCollectionsAndPopulateLabels() {
         CallbackRequest request = CallbackRequest.builder()
             .eventId(COMPLY_ON_BEHALF_SDO.toString())
             .caseDetails(CaseDetails.builder()
-                .data(ImmutableMap.of(
+                .data(Map.of(
                     "standardDirectionOrder", Order.builder()
                         .directions(directionsForRespondentsCafcassOthersAndAllParties())
                         .build(),
@@ -83,7 +64,7 @@ class ComplyOnBehalfControllerTest {
                 .build())
             .build();
 
-        AboutToStartOrSubmitCallbackResponse response = makeRequest(request, "about-to-start");
+        AboutToStartOrSubmitCallbackResponse response = postAboutToStartEvent(request);
         CaseData caseData = mapper.convertValue(response.getData(), CaseData.class);
 
         assertThat(actualResponses(caseData.getRespondentDirectionsCustom(), PARENTS_AND_RESPONDENTS))
@@ -101,14 +82,15 @@ class ComplyOnBehalfControllerTest {
         assertThat(response.getData().get("others_label")).isEqualTo("Person 1 - John Smith\n");
     }
 
+    //Test to check persistence of responses issue.
     @Test
-    void aboutToStartCallbackShouldAddAllPartiesDirectionWithPartyResponseToCorrectMap() throws Exception {
+    void shouldAddAllPartiesDirectionWithPartyResponseToCorrectMap() {
         List<Element<Direction>> directions = getDirectionForRespondentsAllPartiesAndOthers();
 
         CallbackRequest request = CallbackRequest.builder()
             .eventId(COMPLY_ON_BEHALF_SDO.toString())
             .caseDetails(CaseDetails.builder()
-                .data(ImmutableMap.of(
+                .data(Map.of(
                     "standardDirectionOrder", Order.builder().directions(directions).build(),
                     "others", firstOther(),
                     "respondents1", respondents()
@@ -116,7 +98,7 @@ class ComplyOnBehalfControllerTest {
                 .build())
             .build();
 
-        AboutToStartOrSubmitCallbackResponse response = makeRequest(request, "about-to-start");
+        AboutToStartOrSubmitCallbackResponse response = postAboutToStartEvent(request);
         CaseData caseData = mapper.convertValue(response.getData(), CaseData.class);
 
         assertThat(actualResponses(caseData.getRespondentDirectionsCustom(), ALL_PARTIES))
@@ -128,16 +110,16 @@ class ComplyOnBehalfControllerTest {
     }
 
     @Test
-    void aboutToStartCallbackShouldAddDirectionWithPartyResponseToCorrectMapForComplyOthersEvent() throws Exception {
+    void shouldAddDirectionWithPartyResponseToCorrectMapForComplyOthersEvent() {
         List<Element<Direction>> directions = directionsForRespondent();
-        List<Element<CaseManagementOrder>> orders = ImmutableList.of(Element.<CaseManagementOrder>builder()
+        List<Element<CaseManagementOrder>> orders = List.of(Element.<CaseManagementOrder>builder()
             .value(CaseManagementOrder.builder().directions(directions).build())
             .build());
 
         CallbackRequest request = CallbackRequest.builder()
             .eventId(COMPLY_OTHERS.toString())
             .caseDetails(CaseDetails.builder()
-                .data(ImmutableMap.of(
+                .data(Map.of(
                     "standardDirectionOrder", Order.builder().directions(directions).build(),
                     SERVED_CASE_MANAGEMENT_ORDERS.getKey(), orders,
                     "others", firstOther(),
@@ -146,7 +128,7 @@ class ComplyOnBehalfControllerTest {
                 .build())
             .build();
 
-        AboutToStartOrSubmitCallbackResponse response = makeRequest(request, "about-to-start");
+        AboutToStartOrSubmitCallbackResponse response = postAboutToStartEvent(request);
         CaseData caseData = mapper.convertValue(response.getData(), CaseData.class);
 
         assertThat(caseData.getRespondentDirectionsCustom().get(1).getValue().getResponses())
@@ -155,60 +137,6 @@ class ComplyOnBehalfControllerTest {
 
         assertThat(response.getData().get("respondents_label")).isEqualTo("Respondent 1 - John Doe\n");
         assertThat(response.getData().get("others_label")).isEqualTo("Person 1 - John Smith\n");
-    }
-
-    @Test
-    void aboutToSubmitShouldAddResponsesOnBehalfOfParty() throws Exception {
-        CallbackRequest request = CallbackRequest.builder()
-            .eventId(COMPLY_ON_BEHALF_SDO.toString())
-            .caseDetails(CaseDetails.builder()
-                .data(ImmutableMap.of(
-                    "standardDirectionOrder", orderWithAllPartiesDirection(),
-                    "respondentDirectionsCustom", updatedDirection("RESPONDENT_1"),
-                    "otherPartiesDirectionsCustom", updatedDirection("OTHER_1"),
-                    "cafcassDirectionsCustom", updatedDirectionCafcass()))
-                .build())
-            .build();
-
-        AboutToStartOrSubmitCallbackResponse response = makeRequest(request, "about-to-submit");
-
-        List<Element<DirectionResponse>> responses = mapper.convertValue(response.getData(), CaseData.class)
-            .getStandardDirectionOrder().getDirections().get(0).getValue().getResponses();
-
-        assertThat(responses.stream().map(Element::getValue))
-            .containsOnly(
-                expectedResponse("OTHER_1"),
-                expectedResponse("RESPONDENT_1"),
-                expectedResponse("CAFCASS"))
-            .hasSize(3);
-    }
-
-    @Test
-    void aboutToSubmitShouldAddResponsesOnBehalfOfWhenOtherEvent() throws Exception {
-        given(userDetailsService.getUserName(AUTH_TOKEN)).willReturn("Emma Taylor");
-
-        CallbackRequest request = CallbackRequest.builder()
-            .eventId(COMPLY_OTHERS.toString())
-            .caseDetails(CaseDetails.builder()
-                .data(ImmutableMap.of(
-                    "standardDirectionOrder", orderWithAllPartiesDirection(),
-                    "otherPartiesDirectionsCustom", updatedDirection("OTHER_1")))
-                .build())
-            .build();
-
-        AboutToStartOrSubmitCallbackResponse response = makeRequest(request, "about-to-submit");
-
-        List<Element<DirectionResponse>> responses = mapper.convertValue(response.getData(), CaseData.class)
-            .getStandardDirectionOrder().getDirections().get(0).getValue().getResponses();
-
-        assertThat(responses.stream().map(Element::getValue))
-            .containsOnly(DirectionResponse.builder()
-                .complied("Yes")
-                .responder("Emma Taylor")
-                .directionId(DIRECTION_ID)
-                .respondingOnBehalfOf("OTHER_1")
-                .assignee(OTHERS)
-                .build());
     }
 
     private List<Element<Direction>> directionsForRespondentsCafcassOthersAndAllParties() {
@@ -231,8 +159,8 @@ class ComplyOnBehalfControllerTest {
             .build();
     }
 
-    private ImmutableList<Element<Respondent>> respondents() {
-        return ImmutableList.of(Element.<Respondent>builder()
+    private List<Element<Respondent>> respondents() {
+        return List.of(Element.<Respondent>builder()
             .value(Respondent.builder()
                 .party(RespondentParty.builder()
                     .firstName("John")
@@ -270,7 +198,7 @@ class ComplyOnBehalfControllerTest {
             return emptyList();
         }
 
-        return ImmutableList.of(Element.<DirectionResponse>builder()
+        return List.of(Element.<DirectionResponse>builder()
             .id(RESPONSE_ID)
             .value(DirectionResponse.builder()
                 .complied("Yes")
@@ -281,62 +209,8 @@ class ComplyOnBehalfControllerTest {
             .build());
     }
 
-    private AboutToStartOrSubmitCallbackResponse makeRequest(CallbackRequest request, String endpoint)
-        throws Exception {
-        MvcResult response = mockMvc
-            .perform(post("/callback/comply-on-behalf/" + endpoint)
-                .header("authorization", AUTH_TOKEN)
-                .header("user-id", USER_ID)
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(mapper.writeValueAsString(request)))
-            .andExpect(status().isOk())
-            .andReturn();
-
-        return mapper.readValue(response.getResponse()
-            .getContentAsByteArray(), AboutToStartOrSubmitCallbackResponse.class);
-    }
-
-    private List<Element<Direction>> updatedDirection(String onBehalfOf) {
-        return ImmutableList.of(Element.<Direction>builder()
-            .id(DIRECTION_ID)
-            .value(Direction.builder()
-                .responses(ImmutableList.of(Element.<DirectionResponse>builder()
-                    .id(randomUUID())
-                    .value(DirectionResponse.builder()
-                        .complied("Yes")
-                        .respondingOnBehalfOf(onBehalfOf)
-                        .build())
-                    .build()))
-                .build())
-            .build());
-    }
-
-    private List<Element<Direction>> updatedDirectionCafcass() {
-        return ImmutableList.of(Element.<Direction>builder()
-            .id(DIRECTION_ID)
-            .value(Direction.builder()
-                .response(DirectionResponse.builder()
-                    .complied("Yes")
-                    .respondingOnBehalfOf("CAFCASS")
-                    .build())
-                .build())
-            .build());
-    }
-
-    private Order orderWithAllPartiesDirection() {
-        return Order.builder()
-            .directions(ImmutableList.of(Element.<Direction>builder()
-                .id(DIRECTION_ID)
-                .value(Direction.builder()
-                    .directionType("example direction")
-                    .assignee(ALL_PARTIES)
-                    .build())
-                .build()))
-            .build();
-    }
-
     private List<Element<DirectionResponse>> expectedResponses(String onBehalfOf) {
-        return ImmutableList.of(Element.<DirectionResponse>builder()
+        return List.of(Element.<DirectionResponse>builder()
             .id(RESPONSE_ID)
             .value(DirectionResponse.builder()
                 .complied("Yes")
@@ -345,15 +219,6 @@ class ComplyOnBehalfControllerTest {
                 .assignee(COURT)
                 .build())
             .build());
-    }
-
-    private DirectionResponse expectedResponse(String onBehalfOf) {
-        return DirectionResponse.builder()
-            .complied("Yes")
-            .directionId(DIRECTION_ID)
-            .respondingOnBehalfOf(onBehalfOf)
-            .assignee(COURT)
-            .build();
     }
 
     private List<Element<Direction>> getDirectionForRespondentsAllPartiesAndOthers() {
@@ -399,7 +264,7 @@ class ComplyOnBehalfControllerTest {
     }
 
     private List<Element<DirectionResponse>> responsesByRespondent() {
-        return ImmutableList.of(Element.<DirectionResponse>builder()
+        return List.of(Element.<DirectionResponse>builder()
             .id(RESPONSE_ID)
             .value(DirectionResponse.builder()
                 .complied("Yes")
